staging/ingress-controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller-staging
  namespace: ingress-nginx
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32223
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: staging
